--- a/cse.html
+++ b/cse.html
@@ -28,7 +28,7 @@
 
 </body>
 <script>
-fetch('http://localhost:3000/generate-trials')
+fetch('http://metasciencelab.hu/generate-trials')
  .then(response => response.json())
  .then(data => {
    
