--- a/cse.html
+++ b/cse.html
@@ -57,7 +57,7 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
   });
  }
 
-    var jsPsych = initJsPsych({
+  var jsPsych = initJsPsych({
     timeline: timeline,
     on_finish: function () {
       console.log(jsPsych.data.get())
@@ -352,7 +352,8 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
       valence_sd_rating: jsPsych.timelineVariable("valence_sd_rating"),
       finger: jsPsych.timelineVariable("fingers"),
       reversed_color_axes: jsPsych.timelineVariable("reversed_color_axes"),
-      reversed_correct_responses: jsPsych.timelineVariable("reversed_correct_responses")
+      reversed_correct_responses: jsPsych.timelineVariable("reversed_correct_responses"),
+      practice_loop: PracticeLoopIndex
     },
     on_finish: function (data) {
       data.correct = jsPsych.pluginAPI.compareKeys(data.response, data.correct_response);
@@ -390,8 +391,8 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
       block: 'practice'
     },
     on_finish: function (data) {
-      var trials = jsPsych.data.get().filter({task: 'response', loop: PracticeLoopIndex})
-      var correct_trials = jsPsych.data.get().filter({task: 'response', correct: true, loop: PracticeLoopIndex})
+      var trials = jsPsych.data.get().filter({task: 'response', practice_loop: PracticeLoopIndex})
+      var correct_trials = jsPsych.data.get().filter({task: 'response', correct: true, practice_loop: PracticeLoopIndex})
       accuracy = Math.round(correct_trials.count() / trials.count() * 100)
     }
   }
