--- a/cse.html
+++ b/cse.html
@@ -342,7 +342,7 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
     type: jsPsychHtmlKeyboardResponse,
     stimulus: jsPsych.timelineVariable("stimulus"),
     choices: ["f", "j", "d", "k"],
-    trial_duration: 1, //1500,
+    trial_duration: 1500,
     response_ends_trial: true,
     data: {
       task: 'response',
@@ -373,7 +373,7 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
     choices: "NO_KEYS",
     trial_duration: function () {
       // define a random duration between 2000 and 2500ms
-      return 0.5 //Math.floor(Math.random() * 500) + 2000;
+      return Math.floor(Math.random() * 500) + 2000;
     },
     response_ends_trial: false,
     data: {
