--- a/cse.html
+++ b/cse.html
@@ -445,7 +445,7 @@ fetch('http://metasciencelab.hu:3000/generate-trials')
       PracticeLoopIndex++
     },
     loop_function: function (data) {
-        if (accuracy >= -1 ){//85) { 
+        if (accuracy >= 85) { 
       console.log('accuracy passed') 
       return false 
     } else { 
